[FEATURE] Включение аргументов JVM специально для Java 9+